fix spacing

--- a/app/assets/stylesheets/composition/_footer.scss
+++ b/app/assets/stylesheets/composition/_footer.scss
@@ -13,8 +13,8 @@ footer {
       @include grid-column(6);
     }
     nav.nav {
+      text-algn: left;
       @include grid-column(10);
-
     }
   }
 }
