--- a/app/assets/stylesheets/composition/_header.scss
+++ b/app/assets/stylesheets/composition/_header.scss
@@ -8,9 +8,3 @@ header {
     }
   }
 }
-
-.sub nav.nav, header {
-  + .container {
-    margin-top: $baseline*3;
-  }
-}
